@@ -34,9 +34,9 @@ if ((isset($develop_bypass)) AND ($develop_bypass == 1)) {
 	echo ' - Saved '.format_numeric ($sql_cache["saved"]).' Queries';
 }
 echo '</a><br>';
-echo '<a href="http://www.mozilla-europe.org/en/firefox/"><img
-src="'.$config["homeurl"].'/images/firefox.png" 
-align="middle"
+echo '<a href="http://www.mozilla-europe.org/en/firefox/">';
+if (file_exists ($config["homeurl"].'/images/firefox.png'))
+	echo '<img src="'.$config["homeurl"].'/images/firefox.png" align="middle" 
 title="'.__('Pandora FMS console is best viewed with Firefox web browser').'" /></a>';
 echo "</center>";
 
